--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -26,13 +26,14 @@ display_skipped_hosts = True
 # Display OK tasks
 display_ok_hosts = True
 
-# Timeout for SSH connections (in seconds)
-timeout = 30
+# Timeout for SSH connections (in seconds) - increased for slow connections
+timeout = 60
 
 # Use persistent SSH connections for better performance
 [persistent_connection]
-connect_timeout = 30
-command_timeout = 30
+connect_timeout = 60
+command_timeout = 120
+retry_timeout = 30
 
 # Privilege escalation settings
 [privilege_escalation]
@@ -43,9 +44,13 @@ become_ask_pass = False
 
 # SSH settings
 [ssh_connection]
-ssh_args = -o ControlMaster=auto -o ControlPersist=60s -o StrictHostKeyChecking=no
+# Increased timeouts for better reliability
+ssh_args = -o ControlMaster=auto -o ControlPersist=60s -o StrictHostKeyChecking=no -o ConnectTimeout=60 -o ServerAliveInterval=30 -o ServerAliveCountMax=3 -o TCPKeepAlive=yes
 pipelining = True
 control_path_dir = ~/.ansible/cp
+# Retry connection attempts
+retries = 3
+timeout = 60
 
 # Output formatting
 [colors]
